tests/snapshots/integration_test__log_data@23c3694cf3d3ce9ef2c195f06a14e523.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-cred-refr.log:0"
expression: result
info: "type=CRED_REFR msg=audit(1725004605.807:105662): pid=14548 uid=0 auid=4294967295 ses=4294967295 msg='op=PAM:setcred grantors=pam_env,pam_unix acct=\"root\" exe=\"/usr/bin/sudo\" hostname=? addr=? terminal=/dev/pts/0 res=success'"
---
{
  "record_type": "CRED_REFR",
  "timestamp": 1725004605807,
  "id": 105662,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "root",
      "addr": null,
      "exe": "/usr/bin/sudo",
<<<<<<< Updated upstream
      "grantors": "pam_env,pam_unix",
      "hostname": "?",
=======
      "grantors": [
        "pam_env",
        "pam_unix"
      ],
      "hostname": null,
>>>>>>> Stashed changes
      "op": "PAM:setcred",
      "res": "success",
      "terminal": "/dev/pts/0"
    },
    "pid": "14548",
    "ses": "4294967295",
    "uid": "root"
  }
}
