tests/snapshots/integration_test__log_data@25be6d08342ceedceffa7fac55a61bdf.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:10"
expression: result
info: "type=CWD msg=audit(1481077231.371:479):  cwd=\"/home/andrew_kroh\""
---
{
  "record_type": "CWD",
  "timestamp": 1481077231371,
  "id": 479,
  "fields": {
    "cwd": "/home/andrew_kroh"
  }
}
