tests/snapshots/integration_test__log_data@2d81ef9b69147d20082610a3bc990090.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PATH msg=audit(1655465404.819:27091): item=0 name=\"/usr/bin/m4\" inode=40839 dev=00:30 mode=0100755 ouid=582 ogid=582 rdev=00:00 nametype=NORMAL cap_fp=0 cap_fi=0 cap_fe=0 cap_fver=0 cap_frootid=0"
---
{
  "record_type": "PATH",
  "timestamp": 1655465404819,
  "id": 27091,
  "fields": {
    "cap_fe": "0",
    "cap_fi": [],
    "cap_fp": [],
    "cap_frootid": "0",
    "cap_fver": "0",
    "dev": "00:30",
    "inode": "40839",
    "item": "0",
    "mode": "0100755",
    "name": "/usr/bin/m4",
    "nametype": "NORMAL",
    "ogid": 582,
    "ouid": 582,
    "rdev": "00:00"
  }
}
