tests/snapshots/integration_test__log_data@3243a57c005ebf7c5637188e4fbdc3fc.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-daemon-end.log:1"
expression: result
info: "type=DAEMON_END msg=audit(1640080836.094:7063): op=terminate auid=0 pid=27347 subj= res=success\u001dAUID=\"root\""
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  subj= res=success\u001dAUID=\"root\""
    }
  }
}
