tests/snapshots/integration_test__log_data@33367abe043b4c45e8368c3f3955cc86.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-netfilter.log:1"
expression: result
info: "type=NETFILTER_CFG msg=audit(1643035021.052:428): table=?:0;?:0 family=0 entries=2 op=nft_register_gen pid=1027 subj=unconfined comm=\"ebtables\""
---
{
  "record_type": "NETFILTER_CFG",
  "timestamp": 1643035021052,
  "id": 428,
  "fields": {
    "comm": "ebtables",
    "entries": "2",
    "family": "0",
    "op": "nft_register_gen",
    "pid": "1027",
    "subj": "unconfined",
    "table": "?:0;?:0"
  }
}
